--- a/Clone_and_WARC_a_website.ipynb
+++ b/Clone_and_WARC_a_website.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Clone and WARC a website.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9iErQPVXiLahvkONQX7gj",
+      "authorship_tag": "ABX9TyN0nrgsDV3+Sg8X9euVECoj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,18 +88,7 @@
         "id": "lHO0xSTn4TFD"
       },
       "source": [
-        "!zip -rq wget-out.zip dreamlands-virtual-tour.blogspot.com"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "G8eoNsQxpP-Y"
-      },
-      "source": [
-        "!zip -rq wget-out.warc.zip wget-out-meta.warc wget-out-00000.warc"
+        "!zip -rq wget-out.zip carnets-haijin.blogspot.com"
       ],
       "execution_count": null,
       "outputs": []
