--- a/LIFRANUM_UAT.ipynb
+++ b/LIFRANUM_UAT.ipynb
@@ -6,9 +6,8 @@
       "name": "LIFRANUM-UAT.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "mount_file_id": "1-oE_lnRXBAq2bAy9qp1Jr6o1iEl-npj3",
-      "authorship_tag": "ABX9TyOcQTLdln9l20iILuIxNVo7",
+      "authorship_tag": "ABX9TyNiVFhq84GwkalLpAqunKHH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,49 +144,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "id": "S0Y_CSDAWDaU",
-        "outputId": "9c4a2425-c79b-481f-aadb-9441656680c7"
+        "id": "S0Y_CSDAWDaU"
       },
       "source": [
         "sc"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "        <div>\n",
-              "            <p><b>SparkContext</b></p>\n",
-              "\n",
-              "            <p><a href=\"http://2c7f220347cf:4050\">Spark UI</a></p>\n",
-              "\n",
-              "            <dl>\n",
-              "              <dt>Version</dt>\n",
-              "                <dd><code>v2.4.7</code></dd>\n",
-              "              <dt>Master</dt>\n",
-              "                <dd><code>local[*]</code></dd>\n",
-              "              <dt>AppName</dt>\n",
-              "                <dd><code>pyspark-shell</code></dd>\n",
-              "            </dl>\n",
-              "        </div>\n",
-              "        "
-            ],
-            "text/plain": [
-              "<SparkContext master=local[*] appName=pyspark-shell>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -203,26 +166,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "J_v1bc4Xtlr6",
-        "outputId": "4c2bf623-00f5-4b9e-de0f-8e174d089473"
+        "id": "J_v1bc4Xtlr6"
       },
       "source": [
         "!curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
         "    \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'])\""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "http://e507cf101822.ngrok.io\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -256,6 +207,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QieEJ_d8U0Vq"
+      },
+      "source": [
+        "WARCs_PATH=\"/content/data\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "1FH00iPCNUWX"
@@ -267,46 +229,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "5qRhNrI-amJQ",
-        "outputId": "3b8783ec-2c27-43a3-e5ae-80832ea54f91"
+        "id": "5qRhNrI-amJQ"
       },
       "source": [
         "from aut import *\n",
         "from pyspark.sql.functions import desc\n",
         "\n",
-        "WebArchive(sc, sqlContext, \"/content/drive/MyDrive/WARC\") \\\n",
+        "WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
         "  .select(\"url\") \\\n",
         "  .show(10, False)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "+-------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "|url                                                                                                                                  |\n",
-            "+-------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "|http://haikuduvidetdelaplenitude.blogspot.com/2016/02/nahaiwrimo-j-11.html                                                           |\n",
-            "|https://www.tempslibres.org/tl/tlphp/dbhk03.php?id=8763&lg=f                                                                         |\n",
-            "|https://cheminsbattus.wordpress.com/2018/12/27/distance/                                                                             |\n",
-            "|https://wordpress.com/log-in?redirect_to=https%3A%2F%2Fcheminsbattus.wordpress.com%2F2018%2F12%2F27%2Fdistance%2F&signup_flow=account|\n",
-            "|https://www.tempslibres.org/tl/tlphp/dbhk03.php?id=8764&lg=f                                                                         |\n",
-            "|https://wordpress.com/post/cheminsbattus.wordpress.com/4685                                                                          |\n",
-            "|https://www.tempslibres.org/tl/tlphp/dbhk03.php?id=8765&lg=f                                                                         |\n",
-            "|http://haikuduvidetdelaplenitude.blogspot.com/2016/02/nahaiwrimo-j-10.html                                                           |\n",
-            "|https://wordpress.com/stats/post/4685/cheminsbattus.wordpress.com                                                                    |\n",
-            "|https://www.tempslibres.org/tl/tlphp/dbhk03.php?id=8766&lg=f                                                                         |\n",
-            "+-------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "only showing top 10 rows\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -320,17 +255,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "drkuA0SeN7fb",
-        "outputId": "bf11c8f7-3273-4173-ebc3-ea6d859cee38"
+        "id": "drkuA0SeN7fb"
       },
       "source": [
         "from aut import *\n",
         "from pyspark.sql.functions import desc\n",
         "\n",
-        "WebArchive(sc, sqlContext, \"/content/drive/MyDrive/WARC\") \\\n",
+        "WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
         "  .select(extract_domain(\"url\").alias(\"domain\")) \\\n",
         "  .groupBy(\"domain\") \\\n",
@@ -339,30 +270,7 @@
         "  .show(10, False)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "+--------------------------------------+-----+\n",
-            "|domain                                |count|\n",
-            "+--------------------------------------+-----+\n",
-            "|www.tempslibres.org                   |3811 |\n",
-            "|haikuduvidetdelaplenitude.blogspot.com|2138 |\n",
-            "|twitter.com                           |1067 |\n",
-            "|wordpress.com                         |995  |\n",
-            "|cheminsbattus.wordpress.com           |856  |\n",
-            "|lefeucentral.blogspot.com             |658  |\n",
-            "|janickbelleau.ca                      |482  |\n",
-            "|lalitoutsimplement.com                |471  |\n",
-            "|www.youtube.com                       |96   |\n",
-            "|poesiemuziketc.fr                     |10   |\n",
-            "+--------------------------------------+-----+\n",
-            "only showing top 10 rows\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -384,7 +292,7 @@
         "\n",
         "content = \"%radio%\"\n",
         "\n",
-        "WebArchive(sc, sqlContext, \"/content/drive/MyDrive/WARC\") \\\n",
+        "WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
         "  .filter(col(\"content\").like(content)) \\\n",
         "  .select(explode(extract_links(\"url\", \"content\")).alias(\"links\")) \\\n",
@@ -409,17 +317,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0T0Q1Msi4Q5Z",
-        "outputId": "1d497a50-d587-469c-d63a-da4d075758af"
+        "id": "0T0Q1Msi4Q5Z"
       },
       "source": [
         "from aut import *\n",
         "from pyspark.sql.functions import col, explode_outer\n",
         "\n",
-        "webpages = WebArchive(sc, sqlContext, \"/content/drive/MyDrive/WARC\") \\\n",
+        "webpages = WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
         "  .select(remove_prefix_www(extract_domain(\"url\")).alias(\"domain\"), \"url\", \"crawl_date\", explode_outer(extract_links(\"url\", \"content\")).alias(\"link\")) \\\n",
         "  .filter(col(\"content\").like(\"%food%\")) \\\n",
@@ -427,40 +331,7 @@
         "  .show(10)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "+--------------------+--------------------+----------+--------------------+\n",
-            "|                 url|              domain|crawl_date|    destination_page|\n",
-            "+--------------------+--------------------+----------+--------------------+\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "|http://haikuduvid...|haikuduvidetdelap...|  20201028|http://haikuduvid...|\n",
-            "+--------------------+--------------------+----------+--------------------+\n",
-            "only showing top 20 rows\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -479,7 +350,7 @@
       "source": [
         "from pyspark.sql.functions import col, desc\n",
         "\n",
-        "graph = WebArchive(sc, sqlContext, \"/content/drive/MyDrive/WARC\") \\\n",
+        "graph = WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "          .webgraph() \\\n",
         "          .groupBy(\"crawl_date\", remove_prefix_www(extract_domain(\"src\")).alias(\"src_domain\"), remove_prefix_www(extract_domain(\"dest\")).alias(\"dest_domain\")) \\\n",
         "          .count() \\\n",
