--- a/LIFRANUM_UAT.ipynb
+++ b/LIFRANUM_UAT.ipynb
@@ -6,8 +6,8 @@
       "name": "LIFRANUM-UAT.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1-oE_lnRXBAq2bAy9qp1Jr6o1iEl-npj3",
-      "authorship_tag": "ABX9TyNiVFhq84GwkalLpAqunKHH",
+      "mount_file_id": "https://github.com/javieraespinosa/lifranum/blob/main/LIFRANUM_UAT.ipynb",
+      "authorship_tag": "ABX9TyOzaYerjiD1pheeGloZgVz5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -220,6 +220,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "kwKYiQNWYR4X"
+      },
+      "source": [
+        "## Bug: Correcting URLS in Wget's WARCs"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i3jbwFILYThE"
+      },
+      "source": [
+        "from pyspark.sql.functions import udf\n",
+        "\n",
+        "url_correction = udf(lambda s: s[1:-1] if len(s) > 0 and s[0] == '<' and s[-1] == '>' else s)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "1FH00iPCNUWX"
       },
       "source": [
@@ -237,8 +259,9 @@
         "\n",
         "WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
+        "  .withColumn(\"url\", url_correction(\"url\")) \\\n",
         "  .select(\"url\") \\\n",
-        "  .show(10, False)"
+        "  .show(2, False) "
       ],
       "execution_count": null,
       "outputs": []
@@ -263,6 +286,7 @@
         "\n",
         "WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
+        "  .withColumn(\"url\", url_correction(\"url\")) \\\n",
         "  .select(extract_domain(\"url\").alias(\"domain\")) \\\n",
         "  .groupBy(\"domain\") \\\n",
         "  .count() \\\n",
@@ -294,6 +318,7 @@
         "\n",
         "WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "  .webpages() \\\n",
+        "  .withColumn(\"url\", url_correction(\"url\")) \\\n",
         "  .filter(col(\"content\").like(content)) \\\n",
         "  .select(explode(extract_links(\"url\", \"content\")).alias(\"links\")) \\\n",
         "  .select(remove_prefix_www(extract_domain(col(\"links._1\"))).alias(\"src\"), remove_prefix_www(extract_domain(col(\"links._2\"))).alias(\"dest\")) \\\n",
@@ -352,15 +377,16 @@
         "\n",
         "graph = WebArchive(sc, sqlContext, WARCs_PATH) \\\n",
         "          .webgraph() \\\n",
-        "          .groupBy(\"crawl_date\", remove_prefix_www(extract_domain(\"src\")).alias(\"src_domain\"), remove_prefix_www(extract_domain(\"dest\")).alias(\"dest_domain\")) \\\n",
+        "          .withColumn(\"src\", url_correction(\"src\")) \\\n",
+        "          .groupBy(\"crawl_date\", \"src\", \"dest\") \\\n",
         "          .count() \\\n",
-        "          .filter((col(\"dest_domain\").isNotNull()) & (col(\"dest_domain\") !=\"\")) \\\n",
-        "          .filter((col(\"src_domain\").isNotNull()) & (col(\"src_domain\") !=\"\")) \\\n",
+        "          .filter((col(\"dest\").isNotNull()) & (col(\"dest\") !=\"\")) \\\n",
+        "          .filter((col(\"src\").isNotNull()) & (col(\"src\") !=\"\")) \\\n",
         "          .filter(col(\"count\") > 5) \\\n",
         "          .orderBy(desc(\"count\")) \\\n",
         "          .collect()\n",
         "\n",
-        "WriteGEXF(graph, \"links-for-gephi.gexf\")"
+        "WriteGEXF(graph, \"links-for-gephi.gexf\")\n"
       ],
       "execution_count": null,
       "outputs": []
