--- a/Crawl_and_WARC.ipynb
+++ b/Crawl_and_WARC.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1gPNBrF8m4QuLSuEzsputGtZa9Gyq6ids",
-      "authorship_tag": "ABX9TyOIBHP0sVdz77xCSTkuhIsZ",
+      "authorship_tag": "ABX9TyP08zFi0CICO60fTfFBZy7i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -184,7 +184,7 @@
         "id": "_6ZZ3WQyrcyk"
       },
       "source": [
-        "LEVEL=1\n",
+        "LEVEL=0\n",
         "!wget \\\n",
         "  --delete-after -nd \\\n",
         "  --input-file={INPUT_FILE}  \\\n",
@@ -235,7 +235,7 @@
         "id": "j0k4u2JmRqLS"
       },
       "source": [
-        "This example mimics the previous crawling but follows links pointing to other hosts.\n",
+        "This example mimics the previous crawling but follows links pointing to other hosts (`-H` option).\n",
         "\n",
         "> **Attention!** If `LEVEL=0` wget will crawl the entire web! "
       ]
@@ -248,7 +248,7 @@
       "source": [
         "LEVEL=1\n",
         "!wget \\\n",
-        "  -H  \\    # Span to any hos\n",
+        "  -H  \\\n",
         "  --delete-after -nd \\\n",
         "  --input-file={INPUT_FILE}  \\\n",
         "  --recursive   \\\n",
